# kb-remap

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: cmd.rs  hex.rs  hid.rs  key.rs  lib.rs  main.rs  mods.rs  types.rs
src/hid/: cmd.rs  mod.rs
src/hid/types/: key.rs  mod.rs
