[package]
name = "kb-remap"
version = "0.0.3"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Tool to assist remapping macOS keyboard keys"
readme = "README.md"
repository = "https://github.com/rossmacarthur/kb-remap"
license = "MIT OR Apache-2.0"
keywords = ["keyboard", "macos"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
plist = { version = "1.1.0", features = ["serde"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
