[package]
name = "kb-remap"
version = "0.2.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Tool to assist remapping macOS keyboard keys"
readme = "README.md"
repository = "https://github.com/rossmacarthur/kb-remap"
license = "MIT OR Apache-2.0"
keywords = ["keyboard", "macos"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
plist = { version = "1.3.1", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
