[package]
name = "kb-remap"
version = "0.3.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
description = "Tool to assist remapping macOS keyboard keys"
readme = "README.md"
repository = "https://github.com/rossmacarthur/kb-remap"
license = "MIT OR Apache-2.0"
keywords = ["keyboard", "macos"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.71"
plist = { version = "1.4.3", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }

[dependencies.clap]
version = "4.3.4"
default-features = false
features = [
    "std", "help", "usage", "error-context", "suggestions", # default excluding "color"
    "cargo", "env", "derive"                                # optional
]
